--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,7 @@ requires-python = ">=3.12"
 dependencies = [
     "fastapi>=0.116.1",
     "locust>=2.37.14",
+    "python-dotenv>=1.1.1",
+    "sqlalchemy>=2.0.41",
     "uvicorn>=0.35.0",
 ]
