--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ dependencies = [
     "fastapi>=0.116.1",
     "locust>=2.37.14",
     "python-dotenv>=1.1.1",
+    "redis>=6.2.0",
     "sqlalchemy>=2.0.41",
     "uvicorn>=0.35.0",
 ]
